bug fixes when the content is overflowing the screen

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -42,7 +42,8 @@
 html,
 body,
 #root {
-    height: 100%;
+    height: auto;
+    min-height: 100vh;
 }
 
 body {
@@ -52,6 +53,8 @@ body {
 #root {
     width: 100%;
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 a {
@@ -61,7 +64,7 @@ a {
 }
 
 main {
-    min-height: calc(100% - 163px);
+    flex: 1;
     padding: 50px 0px;
     display: flex;
     flex-direction: column;
